      AppleTalk: Declutter appletalk.h.
      IEEE 802.11: Simplify handle_action().
      Provide GET_ macros for 4-byte and 8-byte floating-point numbers
        and use them rather than custom code
      Disregard setlinebuf(3), always use setvbuf(3).
      Change Sun RPC code licence to BSD-3-Clause.
      Use C99 macros to define 64-bit constants and maximum 64-bit
        values.
    Building and testing:
      Autoconf: Remove detection of early IPv6 stacks.
      Detect OS IPv6 support using AF_INET6 only.
      Remove all remaining support for BSD/OS, IRIX, {OSF/1, Digital Unix,
        Tru64 Unix}, SINIX and Ultrix.
      Fix compiling on GNU/Hurd.
      Make illumos build warning-free.
      Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
      Autoconf: fix buggy tests for ether_ntohost().
      Makefile.in: Do not install a version-suffixed tcpdump binary if the
        .devel file does not exists.
      tests: On HP-UX use "diff -c" by default.
      autogen.sh: Allow to configure Autoconf warnings.
      autogen.sh: Delete all trailing blank lines at end of configure.
      Reimplement the tests similarly to libpcap.
    Documentation:
      man: Clarify the "any" pseudo-interface further.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.6 tcpdump release (so far!)
    Refine protocol decoding for:
      IPv6: Add a missing comma and remove a colon in the output.
      TCP: Note if the Urgent Pointer is non-zero while URG flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Note if the Acknowledgment Number is non-zero while ACK flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Fix Reset segment processing.
      IP, IPv6: Fix setting the snapshot length for the payload.
      IP: Use ND_TTEST_LEN() instead of a custom bounds check.
      frag6: Add a bounds check in non-verbose mode.
      PTP: Remove spaces before colons in output.